--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+		<meta name="description" content="Ding Ding, Full Time Idiot, Maker Of Shitty Code, Epic Gamer">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="Roblox Nertivia">
+		<meta property="og:description" content="A fun place to talk about roblox with your friends in">
+		<meta property="og:image" content="https://media.nertivia.tk/6718206850585595904/6718455355942113280/roblox%20logo.gif">
 
   <title>Nertivia Roblox</title>
   <meta content="" name="description">
